test/units/ParseSpec/valid/expr/let-wildcard.algst
let _ = x in
let C _ _ = x in
()
