test/units/ParseSpec/invalid/expr/wildcard-var.algst
let _ = global in _
